--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,11 @@
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
     "isolatedModules": true,
+    "paths": {
+      "ng-uh-sdk-base-components": [
+        "./dist/ng-uh-sdk-base-components"
+      ]
+    },
     "esModuleInterop": true,
     "sourceMap": true,
     "declaration": false,
